# hse-multithreading-examples

solutions/1/: CMakeLists.txt  dfs.h  generator.h  main.cpp
solutions/2/: CMakeLists.txt  README.md  apply_function.h  benchmark.cpp  test.cpp
solutions/3/: README.md  buffered_channel.h
solutions/4/: CMakeLists.txt  main.cpp  mutex.h
solutions/5/: CMakeLists.txt  consumer.cpp  producer.cpp  shared_queue.h
solutions/6/: CMakeLists.txt  main.cpp  process_pool.h
